--- a/BlogOne/Pages/Shared/_Layout.cshtml
+++ b/BlogOne/Pages/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-page="/Index" class="navbar-brand">BlogOne</a>
+                <a asp-page="/Index" class="navbar-brand">Blog One</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -48,10 +48,10 @@
             <p>
                 &copy; 2019 - BlogOne | 
                 <!-- Social medial links in footer -->
-                <a href="#" class="fa fa-facebook"></a>
-                <a href="#" class="fa fa-twitter"></a>
-                <a href="#" class="fa fa-google"></a>
-                <a href="#" class="fa fa-linkedin"></a>
+                <a href="https://www.facebook.com" class="fa fa-facebook"></a>
+                <a href="https://twitter.com" class="fa fa-twitter"></a>
+                <a href="https://plus.google.com" class="fa fa-google"></a>
+                <a href="https://uk.linkedin.com/" class="fa fa-linkedin"></a>
             </p>
         </footer>
     </div>
