--- a/BlogOne/Pages/Index.cshtml
+++ b/BlogOne/Pages/Index.cshtml
@@ -6,21 +6,27 @@
     ViewData["Title"] = "Home page";
 }
 
-<body>
-<div class="jumbotron text-center" style="margin-bottom: 0">
-    <h1>My First Bootstrap 4 Page</h1>
-    <p>Resize this responsive page to see the effect!</p>
-</div>
+<header class="masthead" >
+    <div class="container h-100">
+        <div class="row h-100 align-items-center">
+        </div>
+    </div>
+</header>
 
+<body>
+@if (Model.Message != null)
+{
+    <div class="alert alert-info alert-dismissable text-center ">@Model.Message</div>
+}
 <div class="container" style="margin-top: 30px">
     <div class="row">
         <div class="col-sm-4">
             <h2>About Me</h2>
             <p>Erisus non lacus. Aliquam est massa, fringilla quis cursus ut, dapibus nec enim. Fusce varius fringilla arcu, eu interdum velit malesuada vitae. Donec id augue ipsum. Quisque volutpat urna lacus, tristique sodales urna scelerisque suscipit. Nullam placerat tempor erat, vitae dapibus orci fermentum eu. Nullam tempor finibus lectus id ornare.</p>
-            <hr />
         </div>
 
-        <!-- Search form for future use
+        <!-- Search form for future use 
+        TODO move into nav bar
         <form method="get">
             <div class="form-group">
                 <div class="input-group">
@@ -42,17 +48,35 @@
             {
                 <h1>@blogDetails.Title <small>@blogDetails.Date</small></h1>
                 <p>@blogDetails.TextBody</p>
+                <!-- Edit icon for each post -->
                 <a class="btn btn-sm"
                    asp-page="./Edit" asp-route-blogDetailsId="@blogDetails.Id">
                     <i class="glyphicon glyphicon-edit"></i>
                 </a>
-                <!--
-        <a class="btn btn-sm"
-           asp-page=".\Edit" asp-route-blogDetailsId="@blogDetails.Id">
-            <i class="glyphicon glyphicon-plus"></i>
-        </a>
-                -->
+
+                <hr/>
             }
+            <a asp-page=".\Edit" class="btn btn-danger">Add New</a>
+            <!-- blog navigation, TODO move into a partial view -->
+            <nav aria-label="Page navigation example">
+                <ul class="pagination">
+                    <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                    </li>
+                    <li class="page-item"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </div>
 </div>
