--- a/BlogOne/Pages/Index.cshtml
+++ b/BlogOne/Pages/Index.cshtml
@@ -53,6 +53,10 @@
                    asp-page="./Edit" asp-route-blogDetailsId="@blogDetails.Id">
                     <i class="glyphicon glyphicon-edit"></i>
                 </a>
+                <a class="btn btn-sm"
+                   asp-page="./Delete" asp-route-blogDetailsId="@blogDetails.Id">
+                    <i class="glyphicon glyphicon-trash"></i>
+                </a>
 
                 <hr/>
             }
