--- a/BlogOne/Pages/Edit.cshtml
+++ b/BlogOne/Pages/Edit.cshtml
@@ -15,12 +15,12 @@
     </div>
     <div class="form-group">
         <label asp-for="BlogDetails.Date"></label>
-        <input asp-for="BlogDetails.Date" class="form-control" />
+        <input asp-for="BlogDetails.Date" class="form-control"/>
         <span class="text-danger" asp-validation-for="BlogDetails.Date"></span>
     </div>
     <div class="form-group">
         <label asp-for="BlogDetails.TextBody">Text Body</label>
-        <input asp-for="BlogDetails.TextBody" class="form-control" />
+        <textarea asp-for="BlogDetails.TextBody" class="form-control" rows="4"></textarea>
         <span class="text-danger" asp-validation-for="BlogDetails.TextBody"></span>
     </div>
     <button type="submit" class="btn btn-primary">Save</button>
