--- a/BlogOne/Pages/Index.cshtml
+++ b/BlogOne/Pages/Index.cshtml
@@ -5,18 +5,18 @@
 @{
     ViewData["Title"] = "Home page";
 }
-
-<header class="masthead" >
-    <div class="container h-100">
-        <div class="row h-100 align-items-center">
-        </div>
-    </div>
+@* Header Image *@
+<header>
+    @*<div class="overlay"></div>*@
+    <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+        <source src="https://storage.googleapis.com/coverr-main/mp4/Mt_Baker.mp4" type="video/mp4">
+    </video>
 </header>
 
 <body>
 @if (Model.Message != null)
 {
-    <div class="alert alert-info alert-dismissable text-center ">@Model.Message</div>
+    <div class="alert alert-info text-center ">@Model.Message</div>
 }
 <div class="container" style="margin-top: 30px">
     <div class="row">
@@ -24,31 +24,13 @@
             <h2>About Me</h2>
             <p>Erisus non lacus. Aliquam est massa, fringilla quis cursus ut, dapibus nec enim. Fusce varius fringilla arcu, eu interdum velit malesuada vitae. Donec id augue ipsum. Quisque volutpat urna lacus, tristique sodales urna scelerisque suscipit. Nullam placerat tempor erat, vitae dapibus orci fermentum eu. Nullam tempor finibus lectus id ornare.</p>
         </div>
-
-        <!-- Search form for future use 
-        TODO move into nav bar
-        <form method="get">
-            <div class="form-group">
-                <div class="input-group">
-                    <input type="search" class="form-control" 
-                           asp-for="SearchTerm" />
-                    <span class="input-group-btn">
-                        <button class="btn btn-default">
-                            <i class="glyphicon glyphicon-search"></i>
-                        </button>
-                    </span>
-                </div>
-            </div>
-        </form>
-        -->
-
         <!-- Generate blog posts from the model data -->
         <div class="col-sm-8">
             @foreach (var blogDetails in Model.BlogDetails)
             {
                 <h1>@blogDetails.Title <small>@blogDetails.Date</small></h1>
                 <p>@blogDetails.TextBody</p>
-                <!-- Edit icon for each post -->
+                <!-- Edit/Delete icons for each post -->
                 <a class="btn btn-sm"
                    asp-page="./Edit" asp-route-blogDetailsId="@blogDetails.Id">
                     <i class="glyphicon glyphicon-edit"></i>
@@ -58,31 +40,27 @@
                     <i class="glyphicon glyphicon-trash"></i>
                 </a>
 
-                <hr/>
+                <hr />
             }
             <a asp-page=".\Edit" class="btn btn-danger">Add New</a>
-            <!-- blog navigation, TODO move into a partial view -->
-            <nav aria-label="Page navigation example">
-                <ul class="pagination">
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Previous">
-                            <span aria-hidden="true">&laquo;</span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                    </li>
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
         </div>
     </div>
+    @*
+         Search bar for future use TODO move into nav bar
+        <form method="get">
+            <div class="form-group">
+                <div class="input-group">
+                    <input type="search" class="form-control"
+                           asp-for="SearchTerm" />
+                    <span class="input-group-btn">
+                        <button class="btn btn-default">
+                            <i class="glyphicon glyphicon-search"></i>
+                        </button>
+                    </span>
+                </div>
+            </div>
+        </form>
+    *@
 </div>
 </body>
 
