--- a/BlogOne/Pages/Index.cshtml
+++ b/BlogOne/Pages/Index.cshtml
@@ -7,10 +7,18 @@
 }
 @* Header Image *@
 <header>
-    @*<div class="overlay"></div>*@
+   <div class="overlay"></div>
     <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
         <source src="https://storage.googleapis.com/coverr-main/mp4/Mt_Baker.mp4" type="video/mp4">
     </video>
+    <div class="container h-100">
+        <div class="d-flex h-100 text-center items-center">
+            <div class="w-100 text-white">
+                <h1 class="display-3">Video Header</h1>
+                <p class="lead mb-0">With HTML5 Video and Bootstrap 4</p>
+            </div>
+        </div>
+    </div>
 </header>
 
 <body>
@@ -40,7 +48,7 @@
                     <i class="glyphicon glyphicon-trash"></i>
                 </a>
 
-                <hr />
+                <hr/>
             }
             <a asp-page=".\Edit" class="btn btn-danger">Add New</a>
         </div>
